force-app/main/default/objects/CustomAddressEvent__e/CustomAddressEvent__e.object-meta.xml
<CustomObject>
    <label>CustomAddress</label>
    <pluralLabel>CustomAddresses</pluralLabel>
</CustomObject>