force-app/main/default/objects/CustomAddressEvent__e/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Complete address in single-line format (street, city, postal code) for event payloads. Used when compound fields aren&apos;t available.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>