force-app/main/default/objects/CustomAddressEvent__e/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <description>Type of address for platform events: Billing, Shipping, Mailing, or Other. Determines address usage in downstream systems.</description>
    <label>Address Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>