force-app/main/default/objects/CustomAddressEvent__e/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City/Locality name for address verification in event processing. Use unabbreviated names.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>