force-app/main/default/objects/CustomAddressEvent__e/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>2-letter ISO country code or full country name in event payloads. Critical for geo-based routing rules.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>