force-app/main/default/objects/CustomAddressEvent__e/fields/ERPCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPCustomerNumber__c</fullName>
    <description>Customer identifier from source ERP system included in address change events for synchronization.</description>
    <label>ERP Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>