force-app/main/default/objects/CustomAddressEvent__e/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>Unique correlation ID from source system for event tracking and deduplication (255 char max).</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>