force-app/main/default/objects/CustomAddressEvent__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>Source system record ID included in platform events for reference (18-255 characters).</description>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>