force-app/main/default/objects/CustomAddressEvent__e/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates primary address status in event payloads. Only one address per type should be primary.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>