force-app/main/default/objects/CustomAddressEvent__e/fields/LookupType__c.field-meta.xml
<CustomField>
    <fullName>LookupType__c</fullName>
    <description>Object type (Account/Contact) this address relates to in platform events.</description>
    <label>Lookup Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>