force-app/main/default/objects/CustomAddressEvent__e/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Postal/ZIP code for address validation in event processing systems.</description>
    <label>PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>