force-app/main/default/objects/CustomAddressEvent__e/fields/RelatedId__c.field-meta.xml
<CustomField>
    <fullName>RelatedId__c</fullName>
    <description>Source system ID of related object (Account/Contact) in address change events.</description>
    <label>Related Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>