force-app/main/default/objects/CustomAddressEvent__e/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street address component for event payloads. Includes building numbers and suite/unit identifiers.</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>