force-app/main/default/objects/CustomAddressEvent__e/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Effective start date for address in platform events. Used for future-dated address changes.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>