force-app/main/default/objects/CustomAddressEvent__e/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>Expiration date for address in platform events. Blank indicates currently active address.</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>